plugins {
    id 'java'
    id 'application'
    id "net.ltgt.apt" version "0.21" // for dagger
}

group 'se.billy.mynchen'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.12

repositories {
    mavenCentral()
}

application {
    mainClassName = 'se.lunchreader.Main'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

dependencies {
    implementation 'org.slf4j:slf4j-simple:1.7.25'
    implementation 'io.javalin:javalin:2.2.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
    implementation 'org.apache.pdfbox:pdfbox:2.0.6'
    implementation 'org.jsoup:jsoup:1.11.3'

    implementation 'com.google.dagger:dagger:2.23.1'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.23.1'

    implementation "com.google.auto.value:auto-value-annotations:1.6.2"
    annotationProcessor "com.google.auto.value:auto-value:1.6.2"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}

run {
  jvmArgs=["-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=32323", "--enable-preview"]
}

test {
    useJUnitPlatform()
    jvmArgs=["--enable-preview"]
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}